thanks for reporting. fixed in cvs.

BUG: 91916

svn path=/trunk/kdeextragear-3/digikam/; revision=356916